# Coding_Problems_And_Algorithmic_Challenges

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
design_dynamic_array/: CMakeLists.txt  PROBLEM.md  README.md
design_dynamic_array/01_student_intro/: main.cpp
design_dynamic_array/01_student_intro/python/: main.py
design_dynamic_array/02_pedagogic_oop/: DynamicArray.cpp  DynamicArray.h  main.cpp
design_dynamic_array/02_pedagogic_oop/cpp/: DynamicArray.cpp  main.cpp
design_dynamic_array/02_pedagogic_oop/python/: main.py
design_dynamic_array/03_industry_std/: DynamicArray.hpp  main.cpp
design_dynamic_array/03_industry_std/python/: main.py
design_dynamic_array/04_embedded_fixed/: FixedVector.hpp  main.cpp
design_dynamic_array/04_embedded_fixed/python/: main.py
design_dynamic_array/05_concurrent_safe/: ThreadSafeVector.hpp  main.cpp
design_dynamic_array/05_concurrent_safe/cpp/: ThreadSafeVector.hpp
design_dynamic_array/05_concurrent_safe/python/: main.py
design_dynamic_array/v1_student/: main.cpp
design_dynamic_array/v2_pedagogic/: DynamicArray.cpp  DynamicArray.h
design_dynamic_array/v3_industry/: DynamicArray.hpp
design_singly_linked_list/: CMakeLists.txt  PROBLEM.md  README.md
design_singly_linked_list/01_student_intro/: main.cpp
design_singly_linked_list/01_student_intro/python/: main.py
design_singly_linked_list/02_pedagogic_oop/: LinkedList.cpp  LinkedList.h  main.cpp
design_singly_linked_list/02_pedagogic_oop/cpp/: LinkedList.h
design_singly_linked_list/02_pedagogic_oop/python/: main.py
design_singly_linked_list/03_industry_std/: LinkedList.hpp  main.cpp
design_singly_linked_list/03_industry_std/cpp/: LinkedList.hpp
design_singly_linked_list/03_industry_std/python/: main.py
design_singly_linked_list/04_embedded_fixed/: StaticLinkedList.hpp  main.cpp
design_singly_linked_list/04_embedded_fixed/cpp/: StaticLinkedList.hpp  main.cpp
design_singly_linked_list/04_embedded_fixed/python/: main.py
design_singly_linked_list/05_concurrent_safe/: ThreadSafeLinkedList.hpp  main.cpp
design_singly_linked_list/05_concurrent_safe/cpp/: main.cpp
design_singly_linked_list/05_concurrent_safe/python/: main.py
scripts/: build_all.ps1  build_da_01.ps1  build_da_02.ps1  build_da_03.ps1  build_da_04.ps1  build_da_05.ps1  build_dynamic_array_all.ps1  build_linked_list_all.ps1  build_ll_01.ps1  build_ll_02.ps1  build_ll_03.ps1  build_ll_04.ps1  build_ll_05.ps1  build_target_helper.ps1  run_python_all.ps1
